--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "​https://adi7300.github.io/myplayer",
+  "homepage": "​https://adi7300.github.io/playlistApp",
   "name": "new-template",
   "version": "0.1.0",
   "private": true,
